--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.estacionamento">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
-        android:allowBackup="false"
         android:usesCleartextTraffic="true"
         >
 
@@ -18,36 +20,44 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="com.login.START" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".login.ForgotPasswordActivity"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="com.login.forgotpassword.START" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".home.HomeActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="com.estacionamento.home.START" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".map.devolucao.DevolucaoActivity"
             android:parentActivityName=".login.LoginActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="com.estacionamento.map.devolucao.START" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".map.retirada.RetiradaActivity"
             android:parentActivityName=".login.LoginActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="com.estacionamento.map.retirada.START" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -55,7 +65,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
     </application>
 
 </manifest>
